# pyrho

./: .buildinfo  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements-ci.txt  requirements-docs.txt  requirements-optional.txt  requirements-testing.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/pyrho/: index.doctree
.doctrees/autoapi/pyrho/charge_density/: index.doctree
.doctrees/autoapi/pyrho/pgrid/: index.doctree
.doctrees/autoapi/pyrho/utils/: index.doctree
.doctrees/autoapi/pyrho/vis/: index.doctree
.doctrees/autoapi/pyrho/vis/scatter/: index.doctree
.github/workflows/: deploy.yml  python-publish.yml  release.yml  testing.yml
CHANGELOG/: index.html
_modules/: index.html
_modules/pyrho/: charge_density.html  pgrid.html  utils.html
_modules/pyrho/vis/: scatter.html
_sources/: index.rst.txt
_sources/autoapi/pyrho/: index.rst.txt
_sources/autoapi/pyrho/charge_density/: index.rst.txt
_sources/autoapi/pyrho/pgrid/: index.rst.txt
_sources/autoapi/pyrho/utils/: index.rst.txt
_sources/autoapi/pyrho/vis/: index.rst.txt
_sources/autoapi/pyrho/vis/scatter/: index.rst.txt
autoapi/pyrho/: index.html
autoapi/pyrho/charge_density/: index.html
autoapi/pyrho/pgrid/: index.html
autoapi/pyrho/utils/: index.html
autoapi/pyrho/vis/: index.html
autoapi/pyrho/vis/scatter/: index.html
concepts/: index.html
docs/: CHANGELOG.md  index.md
docs/reference/: core.md  vis.md
docs/source/: conf.py  index.rst
getting_started/jupyter_setup/: index.html
notebooks/: download_from_api.ipynb  fourier_analysis_notes.ipynb  learning_trig.ipynb  regridding.ipynb  smearing.ipynb  vis_fourier.ipynb  visualize_data.ipynb
notebooks/mp_api_demo/: download_from_api.ipynb
notebooks/old/: mapping_regird.ipynb  regrid_2d_example.ipynb  regridding_2d.ipynb  visualize_data.ipynb
paper/: paper.md
papers/: README.md
papers/joss/: paper.bib  paper.md
reference/core/: index.html
reference/vis/: index.html
search/: search_index.json
src/: __init__.py
src/docs/: concepts.md
src/docs/getting_started/: jupyter_setup.md
src/pyrho/: __init__.py  charge_density.py  pgrid.py  utils.py
src/pyrho/core/: chargeDensity.py  charge_density.py  fourier.py  pgrid.py  utils.py
src/pyrho/core/tests/: test_pgrid.py  test_utils.py
src/pyrho/vis/: plotly.py  scatter.py
src/pyrho/vis/tests/: test_plotly.py
test_files/: Si.uc.hdf5
tests/: conftest.py  test_charge_density.py  test_doctests.py
tests/core/: test_charge_density.py  test_pgrid.py  test_spin_density.py  test_utils.py
tests/vis/: test_plotly.py  test_scatter.py
